--- a/FL11_HW10/homework/index.html
+++ b/FL11_HW10/homework/index.html
@@ -7,6 +7,6 @@
   <title>Scope & Context</title>
 </head>
 <body>
-  <script src="./js/fighters_game.js"></script>
+  <script src="js/fighters_game.js"></script>
 </body>
 </html>
